manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops-poc
  # namespace: devsecops-stage
  labels:
    app: devsecops-poc
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: devsecops-poc
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: devsecops-poc
    spec:
      # hostNetwork: true
      containers:
        - name: nap-dotnetcorewebapp
          image: aknot242.azurecr.io/nap-dotnetcorewebapp
          # imagePullPolicy: Never
          resources:
            requests:
              cpu: "200m"
          ports:
            - containerPort: 80
              name: web
            - containerPort: 8090
              name: probe
            - containerPort: 8091
              name: probe500
          livenessProbe: ###this block performs HTTP liveness probes ####
            httpGet:
              path: /app_protect_dos_liveness
              port: 8090
            initialDelaySeconds: 0 #This is the delay which tells kubelet to wait for 10 seconds before performing the first probe
            periodSeconds: 10 #This field specifies that kubelet should perform a probe every 5 seconds.
          readinessProbe: ####this block performs HTTP readiness probes ###
            httpGet:
              path: /app_protect_dos_readiness
              port: 8090
            initialDelaySeconds: 0
            periodSeconds: 10
        - name: dotnetcorewebapp
          image: aknot242.azurecr.io/dotnetcorewebapp
          ports:
            - containerPort: 3000
              name: web
      #     volumeMounts:
      #       - name: shared
      #         mountPath: /shared/
      #       - name: conf
      #         mountPath: /etc/nginx/nginx.conf
      #         subPath: nginx.conf
      #       - name: root-script
      #         mountPath: /root/entrypoint.sh
      #         subPath: entrypoint.sh
      #       - name: log-default
      #         mountPath: /etc/app_protect_dos/log-default.json
      #         subPath: log-default.json
      # volumes:
      #   - name: shared
      #     persistentVolumeClaim:
      #       claimName: pvc-appprotect-dos-shared
      #   - name: conf
      #     configMap:
      #       name: cm-appprotect-dos-nginx
      #       items:
      #         - key: nginx.conf
      #           path: nginx.conf
      #   - name: root-script
      #     configMap:
      #       name: cm-appprotect-dos-entry
      #       defaultMode: 0755
      #       items:
      #         - key: entrypoint.sh
      #           path: entrypoint.sh
      #   - name: log-default
      #     configMap:
      #       name: cm-appprotect-dos-log-default
      #       defaultMode: 0755
      #       items:
      #         - key: log-default.json
      #           path: log-default.json
